fixtures/logs/build_err_missing_cublas_header.txt
$ cmake --build build -j
[ 25%] Building CXX object CMakeFiles/gemm.dir/src/gemm.cpp.o
In file included from /workspace/repo/src/gemm.cpp:2:
/workspace/repo/src/gemm.hpp:6:10: fatal error: 'cublas_v2.h' file not found
    6 | #include <cublas_v2.h>
      |          ^~~~~~~~~~~~~~
1 error generated when compiling for gfx942.
make[2]: *** [CMakeFiles/gemm.dir/build.make:76: CMakeFiles/gemm.dir/src/gemm.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:110: CMakeFiles/gemm.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
